Move 'yourphp' to 'BCZ'

--- a/Yourphp/Tpl/Admin/Default/Index_index.html
+++ b/Yourphp/Tpl/Admin/Default/Index_index.html
@@ -6,11 +6,11 @@
 <script type="text/javascript" src="./Public/Js/jquery.artDialog.js?skin=default"></script> 
 <script type="text/javascript" src="./Public/Js/iframeTools.js"></script>
 <link rel='stylesheet' type='text/css' href='./Public/Css/style.css'>
-<title>{:L('welcome')} Powered by Yourphp</title>
+<title>{:L('welcome')} Powered by BCZ</title>
 </head>
 <body style="background:#E2E9EA">
 <div id="header" class="header">
-	<div class="logo"><a href="http://www.youRphp.cn" target="_blank"><img src="./Public/Images/admin_logo.gif" width="180"></a></div>
+	<div class="logo"><a href="http://www.youRphp.cn" target="_blank"><img src="./Public/Images/admin_logo.gif" width="122" height="49"></a></div>
 	<div class="nav f_r"> <a href="javascript:void(0);" onclick="gocacheurl();">{:L('UPDATE_CACHE')}</a> <i>|</i> <a href="http://www.yourphp.cn" target="_blank">{:L('org_url')}</a> <i>|</i> <a href="http://www.yourphp.cn/license/" target="_blank">{:L('license')}</a>  <i>|</i> <a href="http://bbs.yourphp.cn" target="_blank">{:L('org_bbs')}</a>  <i>|</i> <a href="http://www.yourphp.cn/help" target="_blank">{:L('help')}</a> <i>|</i> &nbsp;&nbsp;</div>
 
 	<div class="nav">&nbsp;&nbsp;&nbsp;&nbsp;{:L('welcome_user')}{$Think.session.username}  <i>|</i> [{$usergroup}]  <i>|</i> [<a href="{:U('Login/logout')}" target="_top">{:L('logout')}</a>]  <i>|</i> <a href="{$site_url}" target="_blank">{:L('home_index')}</a> </div>
