--- a/Yourphp/Tpl/Admin/Default/Login_index.html
+++ b/Yourphp/Tpl/Admin/Default/Login_index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset={:C('DEFAULT_CHARSET')}" />
-<title>{:L('system_name')} Powered by Yourphp</title>
+<title>{:L('system_name')} Powered by BCZ</title>
 <load href='./Public/Css/style.css' />
 <load href="./Public/Js/jquery.min.js"/>
 <load href="./Public/Js/jquery.validate.js"/>
