Add a custom tag library function

--- a/Yourphp/Tpl/Home/Hsxd/Index_index.html
+++ b/Yourphp/Tpl/Home/Hsxd/Index_index.html
@@ -4,9 +4,9 @@
 <div class="focus" id="focus">
     <!-- 900*375 -->
     <ul>
-         <li><a href="" target="_blank"><img src="__PUBLIC__/Images/focus_load_1.png" alt=""></a> </li>
-         <li><a href="" target="_blank"><img src="__PUBLIC__/Images/focus_load_2.png" alt=""></a> </li>
-         <li><a href="" target="_blank"><img src="__PUBLIC__/Images/focus_load_3.png" alt=""></a> </li>
+         <Nav:slide num="5" slideId="1">
+
+        </Nav:slide>
     </ul>
 </div>
 
