--- a/Yourphp/Tpl/Home/Hsxd/Home_header.html
+++ b/Yourphp/Tpl/Home/Hsxd/Home_header.html
@@ -28,20 +28,10 @@ DD_belatedPNG.fix("*");
     </div>
 </div>
 <div class="nav">
+    <!-- {:W('Navication')} -->
     <ul>
-        <li class="start current"><a href="">花生兄弟</a></li>
-        <li class="v_line"></li>
-        <li><a href="">公司介绍</a></li>
-        <li class="v_line"></li>
-        <li><a href="">招商政策</a></li>
-        <li class="v_line"></li>
-        <li><a href="">产品系列</a></li>
-        <li class="v_line"></li>
-        <li><a href="">品牌故事</a></li>
-        <li class="v_line"></li>
-        <li><a href="">兄弟故事</a></li>
-        <li class="v_line"></li>
-        <li class="end"><a href="">花生会</a></li>
+    	<Nav:menu cid="0" class="v_line" num="7">
+    	</Nav:menu>
     </ul>
 </div>
 
